[gd_scene load_steps=51 format=3 uid="uid://brno1uhibtnx"]

[ext_resource type="Script" uid="uid://d35unl7e2i5gi" path="res://script/EvilPlayer.gd" id="1_c3ptj"]
[ext_resource type="Resource" uid="uid://g5ww72lwrh1" path="res://resource/Board.tres" id="2_dti7d"]
[ext_resource type="PackedScene" uid="uid://djsf3itc002gl" path="res://scene/state_machine.tscn" id="2_idtud"]
[ext_resource type="Script" uid="uid://dhepx2737bxmw" path="res://script/state/player_state/IdleState.gd" id="3_8dsjt"]
[ext_resource type="Script" uid="uid://ki1u23wwktia" path="res://script/state/player_state/MoveState.gd" id="4_8hjud"]
[ext_resource type="Script" uid="uid://c3tue7f8ul8dv" path="res://script/state/player_state/SprintState.gd" id="5_4tm5l"]
[ext_resource type="Script" uid="uid://dgcyi6lkgvs6g" path="res://script/state/player_state/AttackState.gd" id="6_14uvd"]
[ext_resource type="Script" uid="uid://c3vaqpne6gsdr" path="res://script/state/player_state/InteractState.gd" id="7_w20ve"]
[ext_resource type="Script" uid="uid://xerbnbwebg7h" path="res://script/state/player_state/UseState.gd" id="8_eoo6w"]
[ext_resource type="Script" uid="uid://dlwylnp3l1144" path="res://script/state/player_state/DropState.gd" id="9_whiqh"]
[ext_resource type="Script" uid="uid://djdu4ngv8cr8e" path="res://script/state/player_state/DeadState.gd" id="10_hevx2"]
[ext_resource type="Script" uid="uid://cfgsbje7vi3tp" path="res://script/component/MovementComponent.gd" id="11_c2qgx"]
[ext_resource type="Script" uid="uid://ctsho4xnp4xo2" path="res://script/brain/AIBrain.gd" id="14_rif31"]
[ext_resource type="Script" uid="uid://brvy5x5uuivu" path="res://script/state_machine/BrainStateMachine.gd" id="15_rxbrd"]
[ext_resource type="Script" uid="uid://c8ikj0cri6mtk" path="res://script/state/brain_state/ConfusedState.gd" id="16_jc5tp"]
[ext_resource type="Script" uid="uid://d48ch43e31jo" path="res://script/state/brain_state/PanicState.gd" id="17_bl01o"]
[ext_resource type="Script" uid="uid://bcfv6yyk1dcf" path="res://script/state/brain_state/FindWeaponState.gd" id="18_tyno4"]
[ext_resource type="Script" uid="uid://b0ov4qsnpoy0w" path="res://script/state/brain_state/ChasePlayerState.gd" id="19_hbida"]
[ext_resource type="Script" uid="uid://dhybi75eyuxgf" path="res://script/state/brain_state/RunState.gd" id="20_3gqpw"]
[ext_resource type="Script" uid="uid://brg57lxnv6idx" path="res://script/state/brain_state/DeadState.gd" id="21_c3ptj"]
[ext_resource type="Script" uid="uid://d308sc06xvbuc" path="res://script/state/brain_state/HuntState.gd" id="21_sj48o"]
[ext_resource type="PackedScene" uid="uid://bdsdvn2l2ejwd" path="res://scene/component/interacter_component.tscn" id="22_f1v8l"]
[ext_resource type="PackedScene" uid="uid://cqttkqoc4j0fr" path="res://scene/speech_text.tscn" id="23_jmx0l"]
[ext_resource type="Script" uid="uid://dlihm53dfpyd5" path="res://script/component/RotationTrackerComponent.gd" id="24_5tqab"]
[ext_resource type="Texture2D" uid="uid://bflqly8sjs1mc" path="res://sprite/evil_player-gridsheet.png" id="25_oxeey"]
[ext_resource type="Script" uid="uid://dathf1gj3y2oa" path="res://script/Flippables.gd" id="25_tuwhu"]
[ext_resource type="PackedScene" uid="uid://bypnx10jtyfcw" path="res://scene/component/hurtbox_component.tscn" id="26_bv8gt"]
[ext_resource type="PackedScene" uid="uid://dh4w6wbocgxad" path="res://scene/component/pickup_item_component.tscn" id="28_4ixa5"]
[ext_resource type="PackedScene" uid="uid://djox8a46od6wh" path="res://scene/component/damager_component.tscn" id="29_1neu7"]
[ext_resource type="Script" uid="uid://r6v4breyygeo" path="res://script/component/AnimationController.gd" id="30_m4j63"]
[ext_resource type="Script" uid="uid://dcdbliakm3u3e" path="res://script/component/StatDataComponent.gd" id="31_b3jd8"]
[ext_resource type="PackedScene" uid="uid://lxue4cgo42vb" path="res://scene/component/player_vision_component.tscn" id="32_0d2it"]
[ext_resource type="AudioStream" uid="uid://dst4b84thvr42" path="res://audio/footstep_1.wav" id="33_cedyb"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_isn2n"]
height = 22.0

[sub_resource type="CircleShape2D" id="CircleShape2D_isn2n"]
radius = 18.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p4hug"]
size = Vector2(18, 29)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dti7d"]
height = 36.0

[sub_resource type="Animation" id="Animation_kk4ol"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("flippables/player_sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("flippables/pickup_item_component:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_3vgh4"]
resource_name = "attack"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("flippables/player_sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 8), Vector2i(1, 8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("flippables/pickup_item_component:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2),
"transitions": PackedFloat32Array(0, 0.5, 0.5),
"update": 0,
"values": [0.0, 1.49575, 2.3178]
}

[sub_resource type="Animation" id="Animation_8ie14"]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("flippables/player_sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 9)]
}

[sub_resource type="Animation" id="Animation_jrjdb"]
resource_name = "idle"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("flippables/player_sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.7, 1.2, 1.4, 2.4, 2.8, 3.2, 3.4, 3.6, 3.8, 4, 4.2, 4.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(0, 0), Vector2i(1, 0), Vector2i(0, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(0, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_l1uwf"]
resource_name = "idle_hold"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("flippables/player_sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("flippables/pickup_item_component:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_k8m7u"]
resource_name = "scared"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("flippables/player_sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1)]
}

[sub_resource type="Animation" id="Animation_wt23p"]
resource_name = "sprint"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("flippables/player_sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3)]
}

[sub_resource type="Animation" id="Animation_xsw3c"]
resource_name = "sprint_hold"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("flippables/player_sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 6), Vector2i(1, 6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("flippables/pickup_item_component:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_pk8el"]
resource_name = "use"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("flippables/player_sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(1, 7), Vector2i(0, 7)]
}

[sub_resource type="Animation" id="Animation_4reak"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("flippables/player_sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(1, 2), Vector2i(0, 2)]
}

[sub_resource type="Animation" id="Animation_qucqc"]
resource_name = "walk_hold"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("flippables/player_sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(1, 5), Vector2i(0, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("flippables/pickup_item_component:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4reak"]
_data = {
&"RESET": SubResource("Animation_kk4ol"),
&"attack": SubResource("Animation_3vgh4"),
&"dead": SubResource("Animation_8ie14"),
&"idle": SubResource("Animation_jrjdb"),
&"idle_hold": SubResource("Animation_l1uwf"),
&"scared": SubResource("Animation_k8m7u"),
&"sprint": SubResource("Animation_wt23p"),
&"sprint_hold": SubResource("Animation_xsw3c"),
&"use": SubResource("Animation_pk8el"),
&"walk": SubResource("Animation_4reak"),
&"walk_hold": SubResource("Animation_qucqc")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_11mpr"]
radius = 104.077

[node name="evil_player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_c3ptj")
starting_weapon = ExtResource("2_dti7d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 6)
shape = SubResource("CapsuleShape2D_isn2n")

[node name="state_machine" parent="." node_paths=PackedStringArray("initial_state") instance=ExtResource("2_idtud")]
unique_name_in_owner = true
initial_state = NodePath("idle_state")

[node name="idle_state" type="Node" parent="state_machine" node_paths=PackedStringArray("move_state", "attack_state", "interact_state", "use_state", "drop_state", "dead_state")]
script = ExtResource("3_8dsjt")
move_state = NodePath("../move_state")
attack_state = NodePath("../atttack_state")
interact_state = NodePath("../interact_state")
use_state = NodePath("../use_state")
drop_state = NodePath("../drop_state")
dead_state = NodePath("../dead_state")

[node name="move_state" type="Node" parent="state_machine" node_paths=PackedStringArray("idle_state", "attack_state", "sprint_state", "interact_state", "use_state", "drop_state", "dead_state")]
script = ExtResource("4_8hjud")
idle_state = NodePath("../idle_state")
attack_state = NodePath("../atttack_state")
sprint_state = NodePath("../sprint_state")
interact_state = NodePath("../interact_state")
use_state = NodePath("../use_state")
drop_state = NodePath("../drop_state")
dead_state = NodePath("../dead_state")

[node name="sprint_state" type="Node" parent="state_machine" node_paths=PackedStringArray("move_state", "idle_state", "attack_state", "interact_state", "use_state", "drop_state", "dead_state")]
script = ExtResource("5_4tm5l")
move_state = NodePath("../move_state")
idle_state = NodePath("../idle_state")
attack_state = NodePath("../atttack_state")
interact_state = NodePath("../interact_state")
use_state = NodePath("../use_state")
drop_state = NodePath("../drop_state")
dead_state = NodePath("../dead_state")

[node name="atttack_state" type="Node" parent="state_machine" node_paths=PackedStringArray("idle_state", "move_state", "dead_state", "damager_component")]
script = ExtResource("6_14uvd")
idle_state = NodePath("../idle_state")
move_state = NodePath("../move_state")
dead_state = NodePath("../dead_state")
damager_component = NodePath("../../flippables/damager_component")

[node name="interact_state" type="Node" parent="state_machine" node_paths=PackedStringArray("idle_state", "move_state")]
script = ExtResource("7_w20ve")
idle_state = NodePath("../idle_state")
move_state = NodePath("../move_state")

[node name="use_state" type="Node" parent="state_machine" node_paths=PackedStringArray("idle_state", "move_state")]
script = ExtResource("8_eoo6w")
idle_state = NodePath("../idle_state")
move_state = NodePath("../move_state")

[node name="drop_state" type="Node" parent="state_machine" node_paths=PackedStringArray("idle_state", "move_state")]
script = ExtResource("9_whiqh")
idle_state = NodePath("../idle_state")
move_state = NodePath("../move_state")

[node name="dead_state" type="Node" parent="state_machine"]
script = ExtResource("10_hevx2")

[node name="movement_component" type="Node" parent="." node_paths=PackedStringArray("footstep_ready_timer", "footstep_sfx_player")]
unique_name_in_owner = true
script = ExtResource("11_c2qgx")
speed = 5.0
sprint_multiplier = 2.0
footstep_ready_timer = NodePath("FootstepReadyTimer")
footstep_sfx_player = NodePath("../footstep_sfx")
metadata/_custom_type_script = "uid://cfgsbje7vi3tp"

[node name="FootstepReadyTimer" type="Timer" parent="movement_component"]
wait_time = 0.5
autostart = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true
debug_path_custom_color = Color(1, 0, 0, 1)

[node name="PathRefreshTimer" type="Timer" parent="."]
wait_time = 0.6
autostart = true

[node name="ai_brain" type="Node" parent="." node_paths=PackedStringArray("nav_agent", "path_refresh_timer")]
unique_name_in_owner = true
script = ExtResource("14_rif31")
nav_agent = NodePath("../NavigationAgent2D")
path_refresh_timer = NodePath("../PathRefreshTimer")

[node name="brain_state_machine" type="Node" parent="ai_brain" node_paths=PackedStringArray("speech_text", "initial_state")]
unique_name_in_owner = true
script = ExtResource("15_rxbrd")
speech_text = NodePath("../../speech_text")
initial_state = NodePath("hunt_state")

[node name="confused_state" type="Node" parent="ai_brain/brain_state_machine" node_paths=PackedStringArray("panic_state")]
script = ExtResource("16_jc5tp")
panic_state = NodePath("../panic_state")

[node name="panic_state" type="Node" parent="ai_brain/brain_state_machine" node_paths=PackedStringArray("run_state", "find_weapon_state", "hunt_state")]
script = ExtResource("17_bl01o")
run_state = NodePath("../run_state")
find_weapon_state = NodePath("../find_weapon_state")
hunt_state = NodePath("../hunt_state")

[node name="find_weapon_state" type="Node" parent="ai_brain/brain_state_machine" node_paths=PackedStringArray("run_state", "hunt_state", "dead_state")]
script = ExtResource("18_tyno4")
run_state = NodePath("../run_state")
hunt_state = NodePath("../hunt_state")
dead_state = NodePath("../dead_state")

[node name="chase_player_state" type="Node" parent="ai_brain/brain_state_machine" node_paths=PackedStringArray("run_state", "hunt_state", "calm_state", "dead_state")]
script = ExtResource("19_hbida")
run_state = NodePath("../run_state")
hunt_state = NodePath("../hunt_state")
calm_state = NodePath("../find_weapon_state")
dead_state = NodePath("../dead_state")

[node name="run_state" type="Node" parent="ai_brain/brain_state_machine" node_paths=PackedStringArray("dead_state")]
script = ExtResource("20_3gqpw")
dead_state = NodePath("../dead_state")

[node name="hunt_state" type="Node" parent="ai_brain/brain_state_machine" node_paths=PackedStringArray("chase_player_state", "dead_state")]
script = ExtResource("21_sj48o")
chase_player_state = NodePath("../chase_player_state")
dead_state = NodePath("../dead_state")
only_hunt_living = false

[node name="dead_state" type="Node" parent="ai_brain/brain_state_machine"]
script = ExtResource("21_c3ptj")

[node name="interacter_component" parent="." instance=ExtResource("22_f1v8l")]
unique_name_in_owner = true
position = Vector2(2, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="interacter_component"]
shape = SubResource("CircleShape2D_isn2n")

[node name="speech_text" parent="." instance=ExtResource("23_jmx0l")]
unique_name_in_owner = true
offset_left = -44.0
offset_top = -40.0
offset_right = -44.0
offset_bottom = -40.0

[node name="rotation_tracker_component" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("24_5tqab")

[node name="flippables" type="Node2D" parent="."]
script = ExtResource("25_tuwhu")
metadata/_custom_type_script = "uid://dathf1gj3y2oa"

[node name="hurtbox_component" parent="flippables" instance=ExtResource("26_bv8gt")]
unique_name_in_owner = true
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="flippables/hurtbox_component"]
position = Vector2(-2, 1.5)
shape = SubResource("RectangleShape2D_p4hug")

[node name="player_sprite" type="Sprite2D" parent="flippables"]
texture = ExtResource("25_oxeey")
hframes = 7
vframes = 10

[node name="pickup_item_component" parent="flippables" instance=ExtResource("28_4ixa5")]
unique_name_in_owner = true

[node name="damager_component" parent="flippables" instance=ExtResource("29_1neu7")]
position = Vector2(20, 2)
collision_mask = 48

[node name="CollisionShape2D" type="CollisionShape2D" parent="flippables/damager_component"]
shape = SubResource("CapsuleShape2D_dti7d")

[node name="animation_controller" type="Node" parent="." node_paths=PackedStringArray("anim_player", "movement_component", "pickup_item_component", "stat_data_component", "flippables")]
unique_name_in_owner = true
script = ExtResource("30_m4j63")
anim_player = NodePath("../AnimationPlayer")
movement_component = NodePath("../movement_component")
pickup_item_component = NodePath("../flippables/pickup_item_component")
stat_data_component = NodePath("../stat_data_component")
flippables = NodePath("../flippables")
metadata/_custom_type_script = "uid://r6v4breyygeo"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4reak")
}

[node name="stat_data_component" type="Node" parent="." node_paths=PackedStringArray("hunger_degeneration_timer")]
unique_name_in_owner = true
script = ExtResource("31_b3jd8")
hunger_degeneration_timer = NodePath("hunger_degen_timer")

[node name="hunger_degen_timer" type="Timer" parent="stat_data_component"]
wait_time = 2.0
autostart = true

[node name="player_vision_component" parent="." instance=ExtResource("32_0d2it")]
unique_name_in_owner = true
position = Vector2(0, -7)
vertical_fov = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_vision_component"]
shape = SubResource("CircleShape2D_11mpr")

[node name="footstep_sfx" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, 13)
stream = ExtResource("33_cedyb")
max_distance = 50.0
bus = &"Sfx"
